--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+    <title>Crystals Collector Sylvia</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
+
 <body>
+    <div id="orangebox">Crystals Collector!</div>
+    <br>
+    <div id="lightorange">
+        <p>You will be given a random number at the start of the game</p>
+        <p>THere are four crystals below. By clicking on a crystal, you will be adding a specific amount of points to your total score</p>
+        <p>You win the game by matching your total score to random number. You lose the game if you total score goes above the random number</p>
+        <p>The value of the crystal is hidden from you untill you click on it</p>
+        <p>Each time when the game starts, the game will change the value of each crystal</p>
+    </div>
+    <br>
+    <div id="randnum"></div>
+    <div id="result1">Wins:</div>
+    <div id="result2">Losses:</div>
+    <div id="diamond1">Diamond 1</div>
+    <div id="diamond2">Diamond 2</div>
+    <div id="diamond3">Diamond 3</div>
+    <div id="diamond4">Diamond 4</div>
+    <div id="Totalscore">Your total score is:</div>
+    <br>
+    <div id="Score"></div>
+
+<script type="text/javascript" src="assets/js/game.js"></script>
 
 </body>
+
 </html>
